<resources>
    <string name="app_name">E-ROTC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_label_lecture">Lectures</string>
    <string name="nav_label_tutorial">Tutorial</string>
    <string name="nav_label_assessment">Assessment</string>
    <string name="nav_label_about">About</string>
    <string name="nav_label_leaderboard">Leaderboard</string>
    <string name="nav_label_settings">Settings</string>

    <string name="label_search_hint">Keyword</string>
    <string name="label_fill_hint">Enter your answer</string>
    <string name="label_identify_image">Identify the image below:</string>
    <string name="label_version">Version %1$s</string>
    <string name="label_question">Question</string>
    <string name="label_time">Time</string>
    <string name="label_score">Your Score</string>
    <string name="label_high_score">Highest Score</string>
    <string name="label_correct_count">Correct Answers</string>
    <string name="label_assessment">Assessment</string>
    <string name="label_unknown">Unknown</string>

    <string name="message_preparing_topics">Loading topics…</string>
    <string name="message_preparing_lectures">Loading lectures…</string>
    <string name="message_preparing_tutorials">Loading tutorials…</string>
    <string name="message_preparing_assessment">Loading assessments…</string>
    <string name="message_no_results">No results found.</string>
    <string name="message_no_record">No records to show.</string>
    <string name="message_test_your_vocabulary">Test your knowledge.</string>
    <string name="message_enter_name">Enter your name</string>

    <string name="text_correct_count">%1$d of %2$d</string>
    <string name="text_rank">%1$d.</string>

    <string name="title_activity_view_lecture">View Lecture</string>
    <string name="title_activity_assessment_choice">Assessment Choice</string>
    <string name="title_activity_view_tutorial">Tutorial</string>

    <string name="button_text_next">Next</string>
    <string name="button_text_resume">Continue</string>
    <string name="button_text_try_again">Try again</string>
    <string name="button_text_exit">Exit</string>
    <string name="button_text_exit_assessment">Exit Assessment</string>
    <string name="button_text_start">Start Assessment</string>
    <string name="button_text_ok">OK</string>
    <string name="button_text_view_leaderboard">View Leaderboard</string>

    <string name="dialog_answer_correct_title">Your answer is correct</string>
    <string name="dialog_answer_wrong_title">Wrong answer</string>
    <string name="dialog_answer_message">Your Answer: %1$s \n\nCorrect Answer: %2$s </string>

    <string name="dialog_times_up_title">Times Up</string>
    <string name="dialog_times_up_message">Correct answer: %1$s</string>

    <string name="dialog_quiz_paused_title">Pause</string>
    <string name="dialog_quiz_paused_message">Assessment is created to test your knowledge .</string>

    <string name="dialog_quiz_start_title">Assessment For %1$s</string>
    <string name="dialog_quiz_start_message">Start assessment for topic %1$s.</string>

    <string name="dialog_assessment_name_required_title">Enter Name</string>
    <string name="dialog_assessment_name_required_message">Please enter your name before starting the assessment.</string>

    <string name="text_presented">Prepared by:</string>
    <string name="text_presented_by">Jessa Nisperos\nMark Hortinela</string>
    <string name="text_presenter_organization">Sultan Kudarat State University\nIsulan Campus\n2019 – 2020</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="assessment_header">Assessment</string>

    <!-- Sync Preferences -->
    <string name="music_title">Enable background music</string>
    <string name="volume_title">Volume</string>
</resources>
