<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_internal" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lecture"
            android:icon="@drawable/ic_folder"
            android:title="@string/nav_label_lecture" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/nav_label_tutorial" />
        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_assessment"
            android:title="@string/nav_label_assessment" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_label_about" />
    </group>

    <group android:id="@+id/group_launch" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/nav_label_leaderboard" />
    </group>

</menu>