<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AssessmentActivity">

    <TextView
        android:id="@+id/label_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        tools:text="Topic 1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-16dp"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="@dimen/assessment_choice_header_margin"
            android:layout_marginLeft="@dimen/assessment_choice_header_margin"
            android:layout_marginRight="@dimen/assessment_choice_header_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_content_margin"
            android:background="@drawable/box_background"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_question"
                    android:textSize="@dimen/text_small"
                    android:gravity="center"
                    android:textColor="@color/colorGray500"/>
                <TextView
                    android:id="@+id/label_question_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_content_margin"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="1/10"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_time"
                    android:textSize="@dimen/text_small"
                    android:gravity="center"
                    android:textColor="@color/colorGray500"/>
                <TextView
                    android:id="@+id/label_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_content_margin"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="8"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_score"
                    android:textSize="@dimen/text_small"
                    android:gravity="center"
                    android:textColor="@color/colorGray500"/>
                <TextView
                    android:id="@+id/label_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_content_margin"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="100"/>
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/button_pause"
            android:layout_width="@dimen/widget_size"
            android:layout_height="@dimen/widget_size"
            app:srcCompat="@drawable/ic_pause"
            android:layout_margin="@dimen/button_margin"
            android:padding="@dimen/general_content_padding"
            android:background="@drawable/circle_background"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3">

            <LinearLayout
                android:id="@+id/container_image_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_identify_image"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_margin="16dp"
                    />

                <ImageView
                    android:id="@+id/image_question"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/label_question"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="@dimen/general_content_padding"
                android:textColor="@color/colorBlack"
                android:text="@string/label_assessment"
                android:gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".05" />

            <LinearLayout
                android:id="@+id/container_choice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <include layout="@layout/layout_fill" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".05"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>